# video-analytics-engine

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yaml
.github/workflows/: ci.yaml
api/: http.md
client/web/: index.html
docker/: base.Dockerfile  dispatcher.Dockerfile  gateway.Dockerfile  inference.Dockerfile  ingest.Dockerfile
k8s/: dispatcher-deploy.yaml  gateway-deploy.yaml  hpa-gateway.yaml  inference-deploy.yaml  ingest-deploy.yaml  ingress.yaml  namespace.yaml
scripts/: build_all.sh  deploy_k8s.sh
src/common/: CMakeLists.txt  consistent_hash.hpp  json.hpp  logging.cpp  logging.hpp  net.hpp
src/dispatcher/: CMakeLists.txt  main.cpp
src/gateway/: CMakeLists.txt  main.cpp
src/inference/: CMakeLists.txt  main.cpp  trt_infer.cpp
src/ingest/: CMakeLists.txt  main.cpp
terraform/: main.tf  variables.tf
